keyword group list reponse 추가